--- a/hypergeometric.Rmd
+++ b/hypergeometric.Rmd
@@ -99,9 +99,161 @@ Therefore, the probability of getting exactly $x$ $\fbox{1}$s in $n$ draws is:
 \[ f(x) = P(X = x) = \dfrac{\binom{N_1}{x}\binom{N_0}{n-x}}{\binom{N}{n}}. \]
 ```
 
+### Graphing {-}
+
 Let's graph the hypergeometric distribution for different values of $n$, $N_1$, and $N_0$.
 
-**TODO**
+First, we hold the number of draws constant at $n=5$ and vary the composition of the box. 
+
+```{r hypergeometric-pmf-1, echo=FALSE, fig.show = "hold", fig.align = "default", fig.asp=0.5}
+library(latex2exp)
+
+par(mfrow=c(1, 3))
+n <- 5
+N1 <- 4
+N0 <- 16
+plot(0:5, dhyper(0:n, N1, N0, n), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.5),
+     main=TeX(paste("Hypergeometric$(n=", n, ", N_1=", N1, ", N_0=", N0, ")$")))
+for(x in 0:5) {
+  lines(c(x, x), c(0, dhyper(x, N1, N0, n)), lwd=2)
+} 
+
+n <- 5
+N1 <- 10
+N0 <- 10
+plot(0:5, dhyper(0:n, N1, N0, n), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.5),
+     main=TeX(paste("Hypergeometric$(n=", n, ", N_1=", N1, ", N_0=", N0, ")$")))
+for(x in 0:5) {
+  lines(c(x, x), c(0, dhyper(x, N1, N0, n)), lwd=2)
+}
+
+n <- 5
+N1 <- 16
+N0 <- 4
+plot(0:5, dhyper(0:n, N1, N0, n), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.5),
+     main=TeX(paste("Hypergeometric$(n=", n, ", N_1=", N1, ", N_0=", N0, ")$")))
+for(x in 0:5) {
+  lines(c(x, x), c(0, dhyper(x, N1, N0, n)), lwd=2)
+}
+```
+
+The distribution shifts, depending on the composition of the box. The more 
+$\fbox{1}$s there are in the box, the more $\fbox{1}$s in the sample.
+
+Next, we study how the distribution changes as a function of $n / N$, the relative fraction of 
+tickets removed from the box. For all of the graphs below, $N_1 = N_0 = N/2$. 
+```{r hypergeometric-pmf-2, echo=FALSE, fig.show = "hold", fig.align = "default", fig.asp=0.5}
+library(latex2exp)
+
+par(mfrow=c(1, 3))
+n <- 10
+N <- 20
+plot(0:n, dhyper(0:n, N/2, N/2, n), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.5),
+     main=TeX(paste("Hypergeometric$(n=", n, ", N=", N, ")$")))
+for(x in 0:n) {
+  lines(c(x, x), c(0, dhyper(x, N/2, N/2, n)), lwd=2)
+} 
+
+n <- 10
+N <- 50
+plot(0:n, dhyper(0:n, N/2, N/2, n), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.5),
+     main=TeX(paste("Hypergeometric$(n=", n, ", N=", N, ")$")))
+for(x in 0:n) {
+  lines(c(x, x), c(0, dhyper(x, N/2, N/2, n)), lwd=2)
+}
+
+n <- 10
+N <- 100
+plot(0:n, dhyper(0:n, N/2, N/2, n), pch=19, xlab="x", ylab="f(x)", ylim=c(0, 0.5),
+     main=TeX(paste("Hypergeometric$(n=", n, ", N=", N, ")$")))
+for(x in 0:n) {
+  lines(c(x, x), c(0, dhyper(x, N/2, N/2, n)), lwd=2)
+}
+```
+
+All three plots are symmetric, which makes sense, since there are exactly as many 
+$\fbox{1}$s as $\fbox{0}$s in the box. However, when the number of draws makes up a large 
+fraction of the box, as in the leftmost plot, the distribution is very tightly 
+concentrated around intermediate values, such as 4, 5, and 6. This makes sense because sampling without 
+replacement is "self-balancing". Each time we draw a $\fbox{1}$, it becomes less likely that we will 
+draw a $\fbox{1}$ again (and more likely to draw a $\fbox{0}$). This makes extreme outcomes, 
+such as drawing all $\fbox{1}$s, less likely.
+
+### Calculating Hypergeometric Probabilities on the Computer {-}
+
+Calculating hypergeometric probabilities by hand is unwieldy when $n$, $N_1$, and $N_0$ are large. 
+Fortunately, the hypergeometric distribution is built into many software packages.
+
+For example, suppose we want to solve the following problem.
+```{example, name="Capture-Recapture"}
+One way to estimate the number of animals in a population is **capture-recapture**. For example, suppose 
+we want to estimate the number of fish in a lake. Clearly, it is impractical to catch all of the fish. 
+Instead, we capture $m$ fish one week, tag them, and release them back into the lake. We go back the next 
+week, after these tagged fish have had a chance to mix with the population, and catch another $n$ distinct fish. 
+Some, but not all, of these $n$ fish will be tagged. The number of tagged fish in this second catch 
+allows us to estimate the population of fish in the lake.
+
+Suppose there are actually 100 fish in the lake; we capture $m=20$ fish the first week and $n=30$ fish the next week. 
+What is the probability that _at least_ $7$ of the $30$ fish will be tagged?
+  
+We can represent this using a box model. The fish in the lake will be represented by $N=100$ tickets, with 
+\begin{align*}
+\text{$N_1=20$ tickets labeled } \fbox{1} &\text{ representing the tagged fish} \\
+\text{$N_0=80$ tickets labeled } \fbox{0} &\text{ representing the non-tagged fish}.
+\end{align*}
+Now, if we draw $n=30$ times from this box without replacement, then the number of $\fbox{1}$s we get 
+corresponds to the number of tagged fish we get.
+
+Therefore, the number of tagged fish is a $\text{Hypergeometric}(n=30, N_1=20, N_0=80)$ random variable. 
+However, to calculate the probability that _at least_ $7$ of the $30$ fish will be tagged, we have 
+to evaluate the p.m.f. at 7, 8, 9, etc. This is a job for a computer, not a human.
+```
+
+In Python, we use a library called [Symbulate](http://dlsun.github.io/symbulate). We first specify the parameters 
+of the hypergeometric distribution; then we evaluate the p.m.f. using the `.pmf()` method. Note that `.pmf()` accepts 
+either a single number or a list of numbers. If a list of numbers is passed into `.pmf()`, then it will evaluate the 
+p.m.f. at each of those numbers, returning a list of probabilities.
+```{python}
+from symbulate import *
+probs = Hypergeometric(n=30, N1=20, N0=80).pmf(range(7, 31))
+probs
+```
+
+To add these probabilities, we call `sum()`:
+```{python}
+sum(probs)
+```
+
+We could have also gotten the same answer by using c.d.f.s. Note that $P(X \geq 7) = 1 - F(6)$.
+```{python}
+1 - Hypergeometric(n=30, N1=20, N0=80).cdf(6)
+```
+
+You can play around with the Python code in [this Colab notebook](https://colab.research.google.com/github/dlsun/probability/blob/master/colabs/py/Calculating_Hypergeometric_Probabilities.ipynb). 
+
+It is possible to do the same calculation in R, a statistical programming language. 
+Note that R uses different names for the parameters. Like Python, R can evaluate the p.m.f. at a 
+single value or a vector of values.
+```{r}
+probs <- dhyper(x=7:30, m=20, n=80, k=30)
+probs
+```
+
+To add these probabilities, we call `sum()`:
+```{r}
+sum(probs)
+```
+
+We could have also gotten the same answer by using c.d.f.s. Notice how R uses the prefix `d` for p.m.f.s and the prefix 
+`p` for c.d.f.s. 
+```{r}
+1 - phyper(6, m=20, n=80, k=30)
+```
+
+You can play around with the R code in [this Colab notebook](https://colab.research.google.com/github/dlsun/probability/blob/master/colabs/r/Calculating_Hypergeometric_Probabilities.ipynb). 
+
+
+### Another Formula for the Hypergeometric Distribution (optional) {-}
 
 There is another formula for the hypergeometric p.m.f. that looks different but is equivalent to 
 \@ref(eq:hypergeometric). It is based on counting the number of ordered outcomes, instead of the 
@@ -166,7 +318,7 @@ to the public. The process of crash testing destroys the car. Suppose that a pro
     a. the probability that at least 1 car will be found defective?
     b. the probability that exactly 2 cars will be found defective?
     
-3. The state proposes a lottery in which you select $6$ numbers from $1$ to $15$. When it is time to draw, the lottery selects $8$ numbers, and you win if at least $4$ of the $6$ numbers you picked are among the $8$ numbers that the lottery drew. What is the probability you win the prize?
+3. The state proposes a lottery in which you select $6$ numbers from $1$ to $15$. When it is time to draw, the lottery selects $8$ different numbers, and you win if at least $4$ of the $6$ numbers you picked are among the $8$ numbers that the lottery drew. What is the probability you win the prize?
 
 <!-- This is a hypergeometric distributions with parameters $N=15, n=8,$ and $k=6$. Therefore, the resulting probability becomes -->
 
