--- a/hypergeometric.Rmd
+++ b/hypergeometric.Rmd
@@ -81,6 +81,8 @@ P(X \geq 3) &= f(3) + f(4) + f(5) \\
 Now, let's derive the p.m.f. of the hypergeometric distribution. Understanding this derivation will help you 
 remember the formula!
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/H1MKe3qmxYQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 ```{proof}
 If we number each ticket $1, 2, \ldots, N$, then there are $\binom{N}{n}$ equally likely unordered outcomes. 
 Note that in this way of counting, the $\fbox{1}$s in the box are distinct. So drawing the first $\fbox{1}$ 
